test/compile-fail/resolution/use/super/expected.txt
error: `super` in paths can only be used in the start position
 --> top.rhdl:2:7
  |
2 | use a::super;
  |        ^^^^^ `super` in paths can only be used in the start position
